--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,5 @@ DB_URL = mongodb+srv://trelloclone:trelloclone@trelloclone.mvot0.mongodb.net/tre
 SECRET_KEY = 'uRr\gV9%.&XdyjE/'
 GOOGLE_CLIENT_ID = '404360481276-q521ortbh07miaf25k0trfv81ridcgn6.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET = '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'
+API_ROOT=https://trello-clone-web.herokuapp.com
 
